# CMake_Template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CmakePresets.json  LICENSE  LICENSE.txt  LibsConfig.cmake  README.md  build.bat  build.sh  config.cmake  os.cmake  rebuild.bat  rebuild.sh  release.bat  release.sh  vcpkg.json
cmake/: LibsConfig.cmake  config.cmake  sanitizer.cmake  static_analyzer.cmake  vcpkg_android.cmake
source/Benchmark/: CMakeLists.txt  ReadMe.md
source/Benchmark/include/: Benchmark.hh  Profiler.hh
source/Benchmark/src/: Benchmark.cc  ProfileLoger.hh  TimeManager.hh  src_files.cmake
source/include/: Log.hpp
source/sample/: CMakeLists.txt
source/sample/src/: main.cc  src_files.cmake
source/samples/include/: osconfig.h.in
source/samples/src/: CMakeLists.txt  main.cpp  src_files.cmake
source/src/: CMakeLists.txt  Log.cpp  src_files.cmake
test/: CMakeLists.txt
test/src/: src_files.cmake  test.cc
